k8s/provedcode-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provedcode-backend-deployment
  labels:
    app: provedcode-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provedcode-backend
  template:
    metadata:
      labels:
        app: provedcode-backend
    spec:
      containers:
      - name: provedcode-backend
        image: mnemov/provedcode-backend
        ports: 
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /api/v2/talents?page=0&size=5
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v2/talents?page=0&size=5
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

      affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - provedcode-backend
                topologyKey: "kubernetes.io/hostname"
