k8s/provedcode-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provedcode-frontend-deployment
  labels:
    app: provedcode-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: provedcode-frontend
  template:
    metadata:
      labels:
        app: provedcode-frontend
    spec:
      containers:
      - name: provedcode-frontend
        image: mnemov/provedcode-frontend
        ports:
        - containerPort: 80
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - provedcode-frontend
              topologyKey: "kubernetes.io/hostname"
