k8s/provedcode-ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provedcode-ingress-hosts
spec:
  rules:
  - host: api.qqfq.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: provedcode-backend-deployment
            port:
              number: 80
  - host: x.qqfq.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: provedcode-frontend-deployment
            port:
              number: 80
